add wild burger and ceramic pot loot_table

--- a/src/main/resources/assets/tfcdelight/lang/en_us.json
+++ b/src/main/resources/assets/tfcdelight/lang/en_us.json
@@ -1,5 +1,7 @@
 {
   "item.tfcdelight.spoon": "Spoon",
+  "item.tfcdelight.wild_burger_slice": "Wild Burger Slice",
   "block.tfcdelight.ceramic_cooking_pot": "Ceramic Cooking Pot",
+  "block.tfcdelight.wild_burger": "Wild Burger",
   "farmersdelight.container.ceramic_cooking_pot": "Ceramic Cooking Pot"
 }
