--- a/src/main/resources/assets/tfcdelight/lang/ja_jp.json
+++ b/src/main/resources/assets/tfcdelight/lang/ja_jp.json
@@ -1,5 +1,7 @@
 {
   "item.tfcdelight.spoon": "スプーン",
+  "item.tfcdelight.wild_burger_slice": "半分のワイルドバーガー",
   "block.tfcdelight.ceramic_cooking_pot": "セラミック料理鍋",
+  "block.tfcdelight.wild_burger": "ワイルドバーガー",
   "farmersdelight.container.ceramic_cooking_pot": "セラミック料理鍋"
 }
