properly implemented feast blocks
- added rotten tip
- empty rotten feast can be picked up
- added honey glazed ham tfcblock
- added rice roll medley tfcblock
- formatted FeastTFCBlocks as FarmersDelight do
- feast block no longer drops when broken by creative player

--- a/src/main/resources/assets/tfcdelight/lang/en_us.json
+++ b/src/main/resources/assets/tfcdelight/lang/en_us.json
@@ -3,5 +3,6 @@
   "item.tfcdelight.wild_burger_slice": "Wild Burger Slice",
   "block.tfcdelight.ceramic_cooking_pot": "Ceramic Cooking Pot",
   "block.tfcdelight.wild_burger": "Wild Burger",
-  "farmersdelight.container.ceramic_cooking_pot": "Ceramic Cooking Pot"
+  "farmersdelight.container.ceramic_cooking_pot": "Ceramic Cooking Pot",
+  "farmersdelight.block.feast.rotten": "This meal is rotten!"
 }
